--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nabu.testing</groupId>
 	<artifactId>images</artifactId>
-	<version>1.0</version>
+	<version>${nabu.testing-images-version}</version>
 	<name>images</name>
 	
 	<parent>
@@ -18,7 +18,6 @@
 		<dependency>
 			<groupId>nabu.testing</groupId>
 			<artifactId>core</artifactId>
-			<version>1.0</version>
 		</dependency>
 	</dependencies>
 </project>
